# Project3_SandpileModel

./: CMakeLists.txt  README.md
lib/: create_bmp.h  create_grid.h  parsing.h
